# The-Cerberus-Project

./: LICENSE.md  README.md
cerberus_ReMon/: CERBERUSLICENSE.txt  CMakeLists.txt  Makefile  README.md  bootstrap.sh  make-common
cerberus_ReMon/MVEE/Inc/: MVEE.h  MVEE_build_config.h  MVEE_erim.h  MVEE_erim_api_inlined.h  MVEE_exceptions.h  MVEE_fake_syscall.h  MVEE_interaction.h  MVEE_logging.h  MVEE_macros.h  MVEE_memory.h  MVEE_mman.h  MVEE_monitor.h  MVEE_pkeys.h  MVEE_signals.h  MVEE_syscalls.h
cerberus_ReMon/MVEE/Src/: MVEE.cpp  MVEE_Cerberus_support.cpp  MVEE_config.cpp  MVEE_logging.cpp  MVEE_logging_strings.cpp  MVEE_memory.cpp  MVEE_mman.cpp  MVEE_monitor.cpp  MVEE_signals.cpp  MVEE_syscalls.cpp  MVEE_syscalls_handlers.cpp  MVEE_syscalls_support.cpp  MVEE_variant_launch.cpp
cerberus_ReMon/MVEE_LD_Loader/: MVEE_LD_Loader.c
cerberus_ReMon/MVEE_LD_Loader/amd64/: MVEE_LD_Loader.h
cerberus_ReMon/benchmarks/: README.md  build.sh  redisexampledump  testredis.sh  testwrk.sh
cerberus_ReMon/benchmarks/conf/: lighttpd.conf.1  lighttpd.conf.3  lighttpd.conf.5  lighttpd_no_security_module.conf.1  nginx.conf.1  nginx.conf.10  nginx.conf.3  nginx.conf.5  nginx_no_security_module.conf.1  redis.conf  redis_enable_threading.conf  redis_enable_threading_no_tls.conf  redis_no_tls.conf
cerberus_ReMon/benchmarks/conf/html/: index.html
cerberus_ReMon/benchmarks/conf/redis-tls/: ca.crt  ca.key  ca.txt  redis.crt  (+6 more)
cerberus_ReMon/build_scripts/: correct_paths.sh  generate_syscall_tables.rb
cerberus_ReMon/patches/: erim-cpi-ubuntu-18.04-debug.patch  erim-cpi-ubuntu-18.04.patch  glibc-2.27-9000-cerberus.patch  glibc-2.27-cerberus-minimal.patch  glibc-2.27-cerberus.patch  linux-5.3.0-full-cerberus.patch  linux-5.3.0-full-ipmon-and-cerberus-pass-domain-experimental.patch  linux-5.4.0-full-cerberus.patch
cerberus_ReMon/rewritten_binaries/: README.md
(+39 files in other folders)
